@@ -865,14 +865,18 @@ class MenusModelItem extends JModelAdmin
 			}
 
 			//Now check for a view manifest file
-			if (!$formFile) {
-				$path = JPath::clean($base.'/views/metadata.xml');
-				if (JFile::exists($path)) {
+			if (!$formFile)
+			{
+				if (isset($view) && JFile::exists($path = JPath::clean($base.'/views/'.$view.'/metadata.xml')))
+				{
 					$formFile = $path;
-				} else {
+				}
+				else
+				{
 					//Now check for a component manifest file
 					$path = JPath::clean($base.'/metadata.xml');
-					if (JFile::exists($path)) {
+					if (JFile::exists($path))
+					{
 						$formFile = $path;
 					}
 				}
